Ran all the code in the index.html through the W3 validator and removed the p and br tags from the 'nav-container-collapse' class. Continued to try and fix the style of the same class to make it vertically and centrally aligned when uncollapsed.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,10 +107,8 @@ div a h1:hover {
     }
 
     .nav-container-collapse {
-        margin-top: 40px;
+        margin-top: 50px;
         float: right;
-        min-width: 25px;
-        max-width: 25px;
     }
 
     .navbar-dark .navbar-toggler {
